# mpipe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  __init__.py  linux_py3.6.sh  win_x64.bat
mpipe/core/: mpipe.cpp  mpipe.hpp  mpipe_book.hpp  mpipe_enum.hpp  mpipe_order.hpp  mpipe_position.hpp  mpipe_security.hpp  mpipe_signal.hpp  mpipe_state.hpp
mpipe/extensions/: ext_order_book_agg.hpp  ext_order_book_top.hpp
mpipe/mcast/: mcast_book.hpp  mcast_extension.hpp  mcast_feed.hpp  mcast_host.hpp  mcast_types.hpp
mpipe/modules/: mod_balancer.hpp  mod_equalizer.hpp  mod_hours.hpp  mod_last_px.hpp  mod_liquidity.hpp  mod_market_px.hpp  mod_order_gen.hpp  mod_pos_limit.hpp  mod_restore_point.hpp  mod_signal_gen.hpp  mod_time_close.hpp  mod_value_limit.hpp  mod_value_slicer.hpp  mod_value_unhedged.hpp  mod_virt_exec.hpp
mpipe/util/: concurrent.hpp  curl.hpp  decimal.hpp  exception.hpp  lazy.hpp  logger.hpp  numeric.hpp  path.hpp  rolling.hpp  seh.hpp  series.hpp  stacktrace.hpp  string.hpp  time.hpp
mpipe_binding/: binding.cpp  binding.hpp  extensions_binding.hpp  mcast_binding.hpp  mcast_feed_binding.hpp  modules_binding.hpp  mpipe_binding.hpp  mpipe_book_binding.hpp  mpipe_enum_binding.hpp  mpipe_order_binding.hpp  mpipe_position_binding.hpp  mpipe_security_binding.hpp  mpipe_signal_binding.hpp  mpipe_state_binding.hpp  rolling_binding.hpp  util_binding.hpp
mpipe_test/: ext_order_book_agg_test.cpp  ext_order_book_top_test.cpp  mcast_book_test.cpp  mcast_feed_test.cpp  mod_balancer_test.cpp  mod_equlizer_test.cpp  mod_hours_test.cpp  mod_last_px_test.cpp  mod_market_px_test.cpp  mod_order_gen_test.cpp  mod_pos_limit_test.cpp  mod_restore_point_test.cpp  mod_time_close_test.cpp  mod_value_limit_test.cpp  mod_value_slicer_test.cpp  mod_value_unhedged_test.cpp  mod_virt_exec_test.cpp  mpipe_book_test.cpp  mpipe_order_test.cpp  mpipe_position_test.cpp  mpipe_test.cpp  utils.hpp
wheel/: setup.py
